# easytransfer

./: .gitignore  DELIVERY.md  README.md  pyproject.toml
.github/workflows/: android-build.yml  cleanup-artifacts.yml  windows-tauri-build.yml
apps/android-scanner/: README.md  gradlew  settings.gradle.kts
apps/android-scanner/app/: build.gradle.kts
apps/android-scanner/app/src/main/: AndroidManifest.xml
apps/android-scanner/app/src/main/java/com/easytransfer/scanner/: MainActivity.kt
apps/android-scanner/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android-scanner/app/src/main/res/layout/: activity_main.xml
apps/android-scanner/app/src/main/res/values/: strings.xml  themes.xml
apps/extension-sender/: README.md  manifest.json  popup.html  popup.js
apps/windows-receiver/: EasyTransferReceiver.csproj  Program.cs  README.md
apps/windows-receiver-tauri/: README.md  package-lock.json  package.json
apps/windows-receiver-tauri/src/: index.html  main.js
apps/windows-receiver-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-receiver-tauri/src-tauri/src/: main.rs
scripts/: build_and_test.sh  e2e_demo.py
src/easytransfer/: __init__.py  compression_layer.py  models.py  protocol.py  receiver_cli.py  receiver_pipeline.py  scanner_cli.py  scanner_pipeline.py  sender_cli.py  sender_pipeline.py  utils.py
tests/: test_compression_policy.py  test_e2e_pipeline.py
