[package]
name = "easytransfer-windows-receiver-tauri"
version = "0.1.0"
description = "EasyTransfer Windows receiver built with Tauri"
authors = ["EasyTransfer Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
flate2 = "1"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
